small test refactoring